--- a/HunterWebServices.EmailService/local.settings.json
+++ b/HunterWebServices.EmailService/local.settings.json
@@ -1,7 +1,10 @@
 {
-    "IsEncrypted": false,
-    "Values": {
-        "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-        "FUNCTIONS_WORKER_RUNTIME": "dotnet"
-    }
+  "IsEncrypted": false,
+  "Values": {
+    "AzureKeyVaultUrl": "https://hunterwebapps-prod.vault.azure.net/",
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet",
+    "HUNTERWEBAPPS-SERVICEBUS": "stored in key vault",
+    "SENDGRID-API-KEY": "stored in key vault"
+  }
 }
