--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build Project
         shell: bash
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release --output .
         
       - name: Azure Functions Action
         uses: Azure/functions-action@v1.4.5
